Intended end of 3rd lecture 05.08.2022

--- a/dzivnieki.html
+++ b/dzivnieki.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mājasdarbs</title>
 
+  <link rel="stylesheet" href="style.css" />
+
   <style>
     .container {
+      margin-top: 60px;
       display: flex;
       gap: 50px;
       flex-wrap: wrap;
@@ -33,6 +36,13 @@
 
 </head>
 <body>
+  <nav class="main-nav">
+    <ul>
+      <li class="nav-item"><a href="/">Sākums</a></li>
+      <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
+      <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="card" style="border-color: plum;">
       <img src="images/suns.jpg" alt="Suns"/>
