--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kaķis</title>
+  <link rel="stylesheet" href="style.css" />
 
   <style>
     h1 {
@@ -34,6 +35,13 @@
   </style>
 </head>
 <body>
+  <nav class="main-nav">
+    <ul>
+      <li class="nav-item"><a href="/">Sākums</a></li>
+      <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
+      <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
+    </ul>
+  </nav>
   <h1 style="color:yellow;">Kaķis</h1>
   <p>Parasts teksts par tēmu, kuras virsraksts dots H1</p>
   <div class="container">
