--- a/taisnsturis.html
+++ b/taisnsturis.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
 
   <style>
     * {
@@ -27,6 +28,13 @@
   </style>
 </head>
 <body>
+  <nav class="main-nav">
+    <ul>
+      <li class="nav-item"><a href="/">Sākums</a></li>
+      <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
+      <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
+    </ul>
+  </nav>
   <div class="outer">
     <div class="inner">
     </div>
