Homework after 3rd lesson

--- a/dzivnieki.html
+++ b/dzivnieki.html
@@ -32,6 +32,13 @@
     .info {
       margin: 15px;
     }
+
+    @media (max-width: 380px) {
+      .card {
+        width: auto;
+        margin: 0 10px;
+      }
+    }
   </style>
 
 </head>
