Hamburger using subling selection

--- a/dzivnieki.html
+++ b/dzivnieki.html
@@ -35,7 +35,6 @@
 
     @media (max-width: 380px) {
       .card {
-        width: auto;
         margin: 0 10px;
       }
     }
@@ -44,11 +43,15 @@
 </head>
 <body>
   <nav class="main-nav">
+    <input class="check" type="checkbox" />
     <ul>
       <li class="nav-item"><a href="/">Sākums</a></li>
       <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
       <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
     </ul>
+    <div class="hamburger-wrapper">
+      <img class="hamburger" src="images/menu.png" alt="Menu"/>
+    </div>
   </nav>
   <div class="container">
     <div class="card" style="border-color: plum;">
