--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
 </head>
 <body>
   <nav class="main-nav">
+    <input class="check" type="checkbox" />
     <ul>
       <li class="nav-item"><a href="/">Sākums</a></li>
       <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
       <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
     </ul>
+    <div class="hamburger-wrapper">
+      <img class="hamburger" src="images/menu.png" alt="Menu"/>
+    </div>
   </nav>
   <h1 style="color:yellow;">Kaķis</h1>
   <p>Parasts teksts par tēmu, kuras virsraksts dots H1</p>
