--- a/taisnsturis.html
+++ b/taisnsturis.html
@@ -29,11 +29,15 @@
 </head>
 <body>
   <nav class="main-nav">
+    <input class="check" type="checkbox" />
     <ul>
       <li class="nav-item"><a href="/">Sākums</a></li>
       <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
       <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
     </ul>
+    <div class="hamburger-wrapper">
+      <img class="hamburger" src="images/menu.png" alt="Menu"/>
+    </div>
   </nav>
   <div class="outer">
     <div class="inner">
