ak vai es nemāku GIT

--- a/dzivnieki.html
+++ b/dzivnieki.html
@@ -49,8 +49,10 @@
       <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
       <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
     </ul>
+    <div class="backdrop"></div>
     <div class="hamburger-wrapper">
-      <img class="hamburger" src="images/menu.png" alt="Menu"/>
+      <img class=" ham-im hamburger" src="images/menu.png" alt="Menu"/>
+      <img class=" ham-im close" src="images/close.png" alt="Menu"/>
     </div>
   </nav>
   <div class="container">
@@ -76,5 +78,8 @@
       </div>
     </div>
   </div>
+
+  <div>Vai piekrīti noteikumiem?</div>
+  <input class="c" type="checkbox" />
 </body>
 </html>
