--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
       <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
       <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
     </ul>
+    <div class="backdrop"></div>
     <div class="hamburger-wrapper">
-      <img class="hamburger" src="images/menu.png" alt="Menu"/>
+      <img class=" ham-im hamburger" src="images/menu.png" alt="Menu"/>
+      <img class=" ham-im close" src="images/close.png" alt="Menu"/>
     </div>
   </nav>
   <h1 style="color:yellow;">Kaķis</h1>
