--- a/taisnsturis.html
+++ b/taisnsturis.html
@@ -35,8 +35,10 @@
       <li class="nav-item"><a href="/dzivnieki.html">Dzīvnieki</a></li>
       <li class="nav-item"><a href="/taisnsturis.html">Taisnstūris</a></li>
     </ul>
+    <div class="backdrop"></div>
     <div class="hamburger-wrapper">
-      <img class="hamburger" src="images/menu.png" alt="Menu"/>
+      <img class=" ham-im hamburger" src="images/menu.png" alt="Menu"/>
+      <img class=" ham-im close" src="images/close.png" alt="Menu"/>
     </div>
   </nav>
   <div class="outer">
